--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ h1 {
 
 <!-- 本文 -->
 <body>
-	<h1>テストページへようこそ</h1>
-	<button onclick="buttonClick()">Push Me</button>
+	<h1>Welcome to Japan!!</h1>
+	<button onClick="buttonClick()">Push Me</button>
 	<h2 id="target"></h2>
 </body>
 
